finish periodic task

--- a/lending-engine/.env.sample
+++ b/lending-engine/.env.sample
@@ -44,12 +44,12 @@ MODANAKU_API_KEY=8c574c41-3e01-4763-89af-fd370989da33
 ESCROW_ACC_NAME=PT Amanah Karya Nusantara Escrow
 ESCROW_ACC_NO=0115476117
 ESCROW_ACC_TYPE=BANK_ACCOUNT
-ESCROW_BANK_NAME=BNI
+ESCROW_BANK_NAME=PT BANK NEGARA INDONESIA 1946 (Persero) Tbk
 # PROFIT
 PROFIT_ACC_NAME=PT Amanah Karya Nusantara Profit
 PROFIT_ACC_NO=0115471119
 PROFIT_ACC_TYPE=BANK_ACCOUNT
-PROFIT_BANK_NAME=BNI
+PROFIT_BANK_NAME=PT BANK NEGARA INDONESIA 1946 (Persero) Tbk
 # VIRTUAL ACCOUNT
 BNI_VA_CREDIT_SECRET_KEY=0281c0c18992b97ae79efb2ac99ef529
 BNI_VA_CREDIT_CLIENT_ID=99096
