Feature/bulk transfer mechanism

--- a/bni-va-grpc/.env.sample
+++ b/bni-va-grpc/.env.sample
@@ -10,7 +10,7 @@ BNI_VA_DEBIT_CLIENT_ID=99097
 BNI_VA_CREDIT_SECRET_KEY=0281c0c18992b97ae79efb2ac99ef529
 BNI_VA_CREDIT_CLIENT_ID=99096
 # actual config
-MONGO_URI=mongodb://modana:password@mongo:27017/
+MONGO_URI=mongodb://mongo:27017/
 MONGO_DBNAME=virtual_account
 # CUSTOM CONFIG
 REPAYMENT_PREFIX=11
