Feature/afpi report

--- a/lending-engine/.env.sample
+++ b/lending-engine/.env.sample
@@ -4,6 +4,18 @@ MONGO_DBNAME=modana
 MONGO_REPLICA_SET=mongo-rs
 ENVIRONMENT=dev
 HOST=0.0.0.0
+# AFPI
+P2P_ID=999999
+AFPI_FTP_HOST=149.129.234.48
+AFPI_FTP_USERNAME=999999
+AFPI_FTP_PASSWORD=abcde1234567890
+AFPI_ZIP_PASSWORD=4qhJW3Xg+9HPXt
+# ANALYST
+ANALYST_BASE_URL=http://149.129.234.48:8000
+ANALYST_USERNAME=analyst@mopinjam.id
+ANALYST_PASSWORD=1234567890
+# FILE SERVING
+FILE_URL=http://147.139.134.250:11000/api/v1/report/afpi/download/{}
 # WORKER
 WORKER_MAX_RETRY=10
 # BROKER
