--- a/lending-engine/requirements.txt
+++ b/lending-engine/requirements.txt
@@ -1,4 +1,4 @@
-amqp==2.5.1
+amqp==2.5.2
 aniso8601==6.0.0
 anyjson==0.3.3
 atomicwrites==1.3.0
@@ -11,30 +11,37 @@ certifi==2019.3.9
 cffi==1.13.2
 chardet==3.0.4
 Click==7.0
+coverage==4.5.4
+cryptography==2.8
 dnspython==1.16.0
 Faker==2.0.3
 Flask==1.0.2
 flask-marshmallow==0.10.0
-flask-restplus==0.12.1
+flask-restplus==0.13.0
 Flask-Script==2.0.6
+freezegun==0.3.12
 grpcio==1.24.1
 idna==2.8
 importlib-metadata==0.23
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==3.0.1
-kombu==4.6.5
+kombu==4.6.6
 MarkupSafe==1.1.1
 marshmallow==2.19.1
 more-itertools==7.2.0
 packaging==19.2
+paramiko==2.7.1
 pluggy==0.13.0
 protobuf==3.10.0
 py==1.8.0
 pycparser==2.19
+pycryptodomex==3.9.4
 pymongo==3.9.0
+PyNaCl==1.3.0
 pyparsing==2.4.2
 pyrsistent==0.14.11
+pysftp==0.2.9
 pytest==5.2.1
 python-dateutil==2.8.0
 pytz==2018.9
