add health check & fix missing callback credentials

--- a/lending-engine/.env.sample
+++ b/lending-engine/.env.sample
@@ -43,6 +43,7 @@ BNI_RDL_USERNAME=2531f110-8069-46d3-9151-0d5a176a6328
 BNI_RDL_PASSWORD=489cb418-74ce-435b-a3e6-c3d901facf3b
 BNI_RDL_API_KEY=1d1cd254-943c-4888-8e58-a62d78fd832c
 BNI_RDL_SECRET_API_KEY=c27de73b-6b02-47f0-8bf4-80266010cf42
+BNI_RDL_CALLBACK_SECRET_KEY=c27de73b-6b02-47f0-8bf4-80266010cf42
 BNI_RDL_COMPANY=MODANA
 BNI_RDL_PARENT_COMPANY=INDONESIA
 # NOTIF
