--- a/lending-engine/docker-compose.yml
+++ b/lending-engine/docker-compose.yml
@@ -82,9 +82,9 @@ services:
                 networks:
                 - lending-engine-net
 
-        periodic-worker:
+        scheduler-worker:
                 image: lending-engine-services
-                entrypoint: make periodic-worker
+                entrypoint: make scheduler-worker
                 env_file: .env
                 depends_on:
                 - flask
