--- a/lending-engine/.env.sample
+++ b/lending-engine/.env.sample
@@ -1,3 +1,5 @@
+#SENTRY
+SENTRY_DSN=sentry-dsn
 # FLASK DB CONFIG
 MONGO_PATH=mongodb://147.139.134.250:27019,147.139.134.250:27020
 MONGO_DBNAME=modana
