--- a/transaction-engine/.env.sample
+++ b/transaction-engine/.env.sample
@@ -4,6 +4,7 @@ MONGO_DBNAME=modana
 MONGO_REPLICA_SET=mongo-rs
 ENVIRONMENT=dev
 HOST=0.0.0.0
+SENTRY_DSN=sentry-dsn
 PYTHONUNBUFFERED=1
 # WORKER
 WORKER_MAX_RETRY=10
