--- a/lending-engine/docker-compose.yml
+++ b/lending-engine/docker-compose.yml
@@ -15,6 +15,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -32,6 +33,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -48,6 +50,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -64,6 +67,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -80,6 +84,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -96,6 +101,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -112,6 +118,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -128,6 +135,7 @@ services:
                 restart: unless-stopped
                 networks:
                 - lending-engine-net
+                - mongo-replicaset-net
                 logging:
                   driver: "json-file"
                   options:
@@ -170,4 +178,6 @@ services:
 
 networks:
   lending-engine-net:
+    external: true
+  mongo-replicaset-net:
     external: true
