--- a/transaction-engine/requirements.txt
+++ b/transaction-engine/requirements.txt
@@ -21,6 +21,7 @@ Flask-Script==2.0.6
 grpcio==1.24.3
 grpcio-testing==1.24.3
 grpcio-tools==1.24.3
+gunicorn==20.0.4
 idna==2.8
 importlib-metadata==0.23
 itsdangerous==1.1.0
